注册（邮箱注册、激活）+登录（验证码+拦截器）

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+#serverproperties
+server.servlet.context-path=/community
 
 spring.thymeleaf.cache=false
 # DataSourceProperties
@@ -17,3 +19,14 @@ mybatis.configuration.map-underscore-to-camel-case=true
 
 
 logging.level.com.example.community=debug
+
+# MailProperties
+spring.mail.host=smtp.sina.com
+spring.mail.username=lzhbjut@sina.com
+spring.mail.password=6b0f5ccf741f4440
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.ssl.enable=true
+
+# ?ip
+community.path.domain=http://localhost:8080
+community.path.upload=D:/IDEA Project/upload
