--- a/src/main/resources/application-develop.properties
+++ b/src/main/resources/application-develop.properties
@@ -4,7 +4,7 @@ server.servlet.context-path=
 spring.thymeleaf.cache=false
 # DataSourceProperties
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://81.70.42.237:3306/community?characterEncoding=utf-8&useSSL=false&serverTimezone=Hongkong
+spring.datasource.url=jdbc:mysql://localhost:3306/community?characterEncoding=utf-8&useSSL=false&serverTimezone=Hongkong
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
@@ -55,7 +55,7 @@ spring.kafka.consumer.auto-commit-interval=3000
 #spring.data.elasticsearch.repositories.enabled=true
 #spring.elasticsearch.uris=localhost:9200
 
-spring.data.elasticsearch.cluster-name=elasticsearch
+spring.data.elasticsearch.cluster-name=nowcoder
 spring.data.elasticsearch.cluster-nodes=81.70.42.237:9300
 
 # TaskExecutionProperties
